tests/outref/TT04.ref

-- TT04 : OCTO609 : TRUNCATE on value expressions does not cause SIG-11 or misleading errors

-- Test of https://gitlab.com/YottaDB/DBMS/YDBOcto/-/issues/609#note_1237730670
truncate 2+3;
truncate 2;
truncate false;

-- Test of https://gitlab.com/YottaDB/DBMS/YDBOcto/-/issues/609#note_1237733914
truncate (names);
truncate (a);
truncate (((names)));
truncate (((a)));

[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 3:1: truncate 2+3;
                   ^
OCTO> truncate 2+3;
[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 4:1: truncate 2;
                   ^
OCTO> truncate 2;
[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected FALSE_TOKEN
LINE 5:1: truncate false;
                   ^^^^^
OCTO> truncate false;
[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected LEFT_PAREN
LINE 7:1: truncate (names);
                   ^
OCTO> truncate (names);
[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected LEFT_PAREN
LINE 8:1: truncate (a);
                   ^
OCTO> truncate (a);
[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected LEFT_PAREN
LINE 9:1: truncate (((names)));
                   ^
OCTO> truncate (((names)));
[ERROR] PATH:LINENUM DATE TIME: ERR_PARSE_FAILED: syntax error, unexpected LEFT_PAREN
LINE 10:1: truncate (((a)));
                    ^
OCTO> truncate (((a)));
OCTO> 
